# mlpack-proj

./: CMakeLists.txt  README.md
NeuralNetwork/: Matrix.h  NeuralNetwork.h  NeuralNetwork.sln  NeuralNetwork.vcxproj
src/: main.cpp
